--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -14,10 +14,13 @@
 
 
 //common
-	html, body, .wrap {height:100%;}
+	html, body {height:100%;}
 	html {
 		overflow-y:scroll; overflow-x:hidden;
 		width:100%; background:#000; scroll-behavior:smooth;
+		background:url('@{bg-url}/main_top_bg.jpg') no-repeat center top;
+		background-size:cover;
+		background-attachment:fixed;
 	}
 	body {.font-kr; word-break:keep-all;}
 	@keyframes bodyOn{
@@ -44,7 +47,7 @@
 	}
 	@media (max-width: @screen-sm-max){
 		.wrap {
-			display:block; height:100%; min-height:100%;
+			display:block;
 			.uk_header {display:block;}
 			.uk_container {
 				display:block;
@@ -53,52 +56,6 @@
 			.uk_footer {display:block;}
 		}
 	}
-
-
-/*
-.uk_logo { margin:0 auto;
-	@import url('https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese');
-	.font {font-family:'Jura', sans-serif;}
-
-	overflow:hidden; position:relative;
-	display:inline-block; vertical-align:top;
-	width:180px; font-size:100%;
-	opacity:0; transition:opacity .15s;
-	&:before, &:after {left:0; position:absolute; .font;}
-	&:before {
-		top:0;
-		line-height:1.15em; text-indent:0.06em;
-		font-size:3em; font-weight:600; color:inherit;
-		//letter-spacing:-0.027em;
-		letter-spacing:-0.002em;
-		content:attr(data-logo);
-	}
-	&:after {
-		bottom:0;
-		line-height:2.1em; text-indent:0.65em; text-transform:uppercase;
-		font-size:0.66em; font-weight:300; letter-spacing:0.433em; color:inherit;
-		content:attr(data-url);
-	}
-	p {padding-top:43.612%; font-size:0;}
-	span {
-		position:absolute; right:0.5em; top:0.43em;
-		width:0.18em; height:2.67em;
-		animation:uxkm_logo 1.2s linear infinite;
-		&:before, &:after {
-			position:absolute; left:-0.06em; top:0;
-			width:0.29em; height:0.08em; background:inherit;
-			content:"";
-		}
-		&:after {top:auto; bottom:0;}
-	}
-}
-@keyframes uxkm_logo{
-	0% {opacity:0;}
-	50% {opacity:0;}
-	51% {opacity:1;}
-	100% {opacity:1;}
-}
-*/
 
 
 //uk_logo
@@ -128,7 +85,7 @@
 	}
 
 
-//uk-header
+//uk_header
 	.uk_header {
 		position:fixed; left:0; top:0; right:0; z-index:9;
 		height:@hdHeight;
@@ -365,9 +322,9 @@
 	}
 
 
-//uk-footer
+//uk_footer
 	.uk_footer {
-		position:relative; z-index:9; text-align:center;
+		position:relative; z-index:8; text-align:center;
 		.nav {
 			position:relative; padding:56px 0;
 			div {position:relative; display:inline-block; font-size:0;}
@@ -427,8 +384,8 @@
 		}
 	}
 	.main_page .uk_footer .nav {
-		max-width:@conWidth -  (@pc_padding/2); margin:0 auto;
-		background:transparent;
+		//max-width:@conWidth - (@pc_padding/2); margin:0 auto;
+		//background:transparent;
 		&:before {
 			position:absolute; left:@pc_padding; right:@pc_padding; top:0;
 			height:1px; background:rgba(255,255,255,.15);
@@ -436,10 +393,6 @@
 		}
 	}
 	@media (max-width: @screen-sm-max){
-		.main_content .uk_footer .nav {
-			max-width:100%; width:100%;
-			&:before {left:10px; right:10px;}
-		}
 		.uk_footer {
 			.nav {
 				padding:20px 0;
@@ -469,21 +422,20 @@
 				.copy {line-height:16px; margin-top:15px; font-size:12px;}
 			}
 		}
+		.main_page .uk_footer .nav {
+			max-width:100%; width:100%;
+			&:before {left:15px; right:15px;}
+		}
 	}
 
 
 
 
 //main ----------------------------------------------------------------------------------------//
-	.main_page {
-		background:url('@{bg-url}/main_top_bg.jpg') no-repeat center top;
-		background-size:cover;
-		background-attachment:fixed;
-	}
+	.main_page {}
 	.main_content {
-		position:relative; z-index:1;
 		text-align:center;
-		> article {position:relative;}
+		> article {}
 	}
 	@media (max-width: @screen-sm-max){
 		.main_page:before {
@@ -500,7 +452,8 @@
 	//intro -----------//
 	.main_intro {
 		@pb:120px;
-		min-height:700px; z-index:2;
+		position:relative;
+		min-height:700px; height:100vh; z-index:2;
 		.txt_box {
 			position:absolute; left:0; right:0; bottom:@pb;
 			.tit {overflow:hidden;}
@@ -569,6 +522,7 @@
 			&:hover {opacity:1;}
 		}
 	}
+	.device .main_intro {height:100%;}
 	@keyframes main_introTxt {
 		0% {opacity:0; letter-spacing:20px; filter:blur(6px);}
 		100% {opacity:1; letter-spacing:2px; filter:blur(0);}
@@ -610,6 +564,7 @@
 				&:hover {opacity:.8;}
 			}
 		}
+		//.device .main_intro {height:unset !important;}
 	}
 	//banner 반응형 텍스트
 	@media(max-width:450px){
@@ -621,8 +576,8 @@
 	@main_info_p:20px;
 	@main_info_w:940px + (@main_info_p*2);
 	.main_info {
-		z-index:1;
-		min-height:900px; padding:100px 0;
+		position:relative; z-index:1;
+		padding:140px 0;
 		transition:background-color .8s;
 		//background:rgba(255,255,255,1.3);
 		background: #ffffff;
@@ -630,10 +585,9 @@
 		background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 70%,#d5d5d5 100%);
 		background: radial-gradient(ellipse at center,  #ffffff 70%,#d5d5d5 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d5d5d5',GradientType=1 );
-		//&.info_scroll {background-color:#fff;}
 
 		.txt_area {
-			position:relative; top:50%; z-index:2; transform:translate(0, -50%);
+			position:relative; z-index:2; //transform:translate(0, -50%);
 			max-width:@main_info_w; margin:0 auto; padding:0 @main_info_p;
 			p {
 				line-height:160%;
@@ -725,7 +679,7 @@
 
 	@media(max-width:@main_info_w + 40px){
 		.main_info {
-			min-height:auto; height:auto !important;  padding:13% 0;
+			padding:14% 0;
 			.txt_area {
 				position:static; transform:translate(0, 0);
 				p {font-size:2.95vw;}
@@ -833,7 +787,7 @@
 		.editor_wrap {
 			max-width:1400px; margin:0 auto; padding:0 @pc_padding;
 			text-align:left;
-			.uk_editor {margin-top:7%;}
+			.uk_editor {margin-top:calc(5% + 20px); border-width:6px;}
 		}
 	}
 	//반응형 텍스트
@@ -852,20 +806,31 @@
 			.txt p {font-size:15px;}
 		}
 	}
+	@media(max-width:@screen-sm-max){
+		.main_editor .editor_wrap {
+			padding:0 15px;
+			.uk_editor {border-width:2px;}
+		}
+	}
+
+
+	//editor -----------//
+	.main_created {
+		position:relative;
+		.inner:before {
+			position:absolute; left:@pc_padding; right:@pc_padding; top:0;
+			height:1px; background:rgba(255,255,255,.15);
+			content:"";
+		}
+	}
+	@media(max-width:@screen-sm-max){
+		.main_created {
+			.inner:before {left:15px; right:15px;}
+		}
+	}
 
 
 
 
-
-	.main_created {background:#fff;}
-
-
-
-
-
-
-
-
-
-
-
+//main ----------------------------------------------------------------------------------------//
+	.sub_content {background:#eee;}
