- 메인 Created by 완료(km)

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -5,6 +5,7 @@
 .font-kr {font-family:'Noto Sans KR', 'Malgun Gothic', 'Dotum',  sans-serif;}
 .font-en {font-family:'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;}
 .font-tit {font-family:'Anton', 'Malgun Gothic', 'Dotum', sans-serif;}
+.font-tit2 {font-family:'Cinzel Decorative', cursive;}
 .font-icon {font-family:"Font Awesome 5 Free", sans-serif;}
 
 
